# SafuForum

./: .gitignore  README.md  docker-compose.yml  s3_identity.json
SafuForumBackend/: Dockerfile  build.gradle  schema.dbml  settings.gradle
SafuForumFrontend/: .gitignore  Dockerfile  next.config.js  nginx.conf  package.json
SafuForumFrontend/app/: globals.css  layout.tsx  page.tsx
SafuForumFrontend/components/: CommentItem.tsx  CommentList.tsx  Header.tsx  ImageUploader.tsx  PostCard.tsx  Sidebar.tsx
SafuForumFrontend/lib/: api-client.ts  api.ts  auth-context.tsx  image-utils.ts  jwt-utils.ts  token-refresh-service.ts  types.ts
ai/: implementation.md  main.py  pyproject.toml
ai/catornot_imageclassifier/: catclassifiercnn.ipynb
ai/hamorspam_textclassifier/: spamhamclassifierwithrejectoption.ipynb
ai/imageclassifiers/: animaldatasetformatter.ipynb  catclassifiercnn.ipynb
ai/textclassifiers/: spamhamclassifier.ipynb
ai/toxicornot_textclassifier/: newclassifier.py  oldclassifier.ipynb  prepare_data.ipynb  serve_http.py  test.py  toxicornot_inference.py
apps/moderation_orchestrator/: Dockerfile  README.md  databasedesign.md  events.md  main.py  pyproject.toml  schema.dbml
apps/moderation_orchestrator/migrations/: env.py
apps/moderation_orchestrator/migrations/versions/: 0ade6ddf1f14_initial_tables.py  445a25912f5a_v1.py  a6d11fd3fa75_baseline.py
apps/moderation_orchestrator/src/apps/: orchestrator_service.py
apps/moderation_orchestrator/src/core/: config.py  db.py  models.py
apps/moderation_orchestrator/src/helpers/: messaging.py
apps/moderation_orchestrator/src/repositories/: decisions.py
apps/moderation_orchestrator/src/routers/: __init__.py  moderations.py
services/: README.md  findings.md
services/frontend/: next.config.js  package-lock.json
services/moderation_aggregator/: README.md  pyproject.toml
services/moderation_image_catornotclassifier/: .dockerignore  Dockerfile  README.md  main.py  nextsteps.md  pyproject.toml
services/moderation_image_catornotclassifier/app/: inference.py  inspect_model.py  s3_handler.py  serve.py  settings.py  types.py
(+177 files in other folders)
