[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "gensim>=4.4.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "kaggle>=1.8.2",
    "kagglehub[hf-datasets]>=0.3.13",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
